--- a/answer_keys/6_normality_key_hidden.Rmd
+++ b/answer_keys/6_normality_key_hidden.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-```{r}
+```{r, echo = F}
 library(tidyverse)
 ```
 
@@ -20,33 +20,33 @@ For each of the following, report the corresponding $p$ value for the $z$ score.
 
 A.  2.3
 
-```{r}
+```{r, echo = F}
 pnorm(q = 2.3) |> round(2)
 ```
 
 B.  6.4
 
-```{r}
+```{r, echo = F}
 pnorm(q = 6.4) |> round(2)
 ```
 
 C.  -1.5
 
-```{r}
+```{r, echo = F}
 pnorm(q = -1.5) |> round(2)
 ```
 
 
 D.  -9.2
 
-```{r}
+```{r, echo = F}
 pnorm(q = -9.2) |> round(2)
 ```
 
 
 E.  0.3
 
-```{r}
+```{r, echo = F}
 pnorm(q = 0.3) |> round(2)
 ```
 
@@ -57,37 +57,37 @@ For the following, report the corresponding $z$ score for the stated $p$ value. 
 
 A.  0.96
 
-```{r}
+```{r, echo = F}
 qnorm(p = 0.96) |> round(2)
 ```
 
 B.  0.23
 
-```{r}
+```{r, echo = F}
 qnorm(p = 0.23) |> round(2)
 ```
 
 C.  0.14
 
-```{r}
+```{r, echo = F}
 qnorm(p = 0.14) |> round(2)
 ```
 
 D.  0.0036
 
-```{r}
+```{r, echo = F}
 qnorm(p = 0.0036) |> round(2)
 ```
 
 E.  0.47
 
-```{r}
+```{r, echo = F}
 qnorm(p = 0.47) |> round(2)
 ```
 
 F.  0.62
 
-```{r}
+```{r, echo = F}
 qnorm(p = 0.62) |> round(2)
 ```
 
@@ -95,7 +95,7 @@ qnorm(p = 0.62) |> round(2)
 
 For the following scenarios, calculate the confidence interval for the mean.
 
-```{r}
+```{r, echo = F}
 # CI <- Z*(sdtemp/sqrt(n))
 
 # CI
@@ -104,7 +104,7 @@ For the following scenarios, calculate the confidence interval for the mean.
 
 A.  $\bar{x} = 7.6$, $\sigma = 1.3$, $n = 5$, $CI = 99\%$
 
-```{r}
+```{r, echo = F}
 CI <- (qnorm(p = 0.995)*(1.3/sqrt(5))) |> round(2)
 
 print(paste0("7.6 +/- ",CI))
@@ -112,7 +112,7 @@ print(paste0("7.6 +/- ",CI))
 
 B.  $\bar{x} = -4.9$, $\sigma = 0.7$, $n = 6$, $CI = 95\%$
 
-```{r}
+```{r, echo = F}
 CI <- (qnorm(p = 0.975)*(0.7/sqrt(6))) |> round(2)
 
 print(paste0("-4.9 +/- ",CI))
@@ -120,7 +120,7 @@ print(paste0("-4.9 +/- ",CI))
 
 C.  $\bar{x} = 2.1$, $\sigma = 0.4$, $n = 10$, $CI = 90\%$
 
-```{r}
+```{r, echo = F}
 CI <- (qnorm(p = 0.95)*(0.4/sqrt(10))) |> round(2)
 
 print(paste0("2.1 +/- ",CI))
@@ -128,7 +128,7 @@ print(paste0("2.1 +/- ",CI))
 
 D.  $\bar{x} = 0.1$, $\sigma = 3$, $n = 12$, $CI = 95\%$
 
-```{r}
+```{r, echo = F}
 CI <- (qnorm(p = 0.975)*(3/sqrt(12))) |> round(2)
 
 print(paste0("0.1 +/- ",CI))
@@ -140,7 +140,7 @@ As part of a study on how climate affects the weights of Alpine Ibex, researcher
 
 The data for this problem will be in the object `spring_temps` below:
 
-```{r}
+```{r, echo = F}
 # load weather data
 weather <- read_csv("https://zenodo.org/records/12749273/files/20240505_env_var_dataset.csv")
 
@@ -156,7 +156,7 @@ Evaluate their claims by:
 
 1.  Calculating a $z$-score for their temperature (6.2).
 
-```{r}
+```{r, echo = F}
 zscore <- function(xbar, mu, sd.x, n = 1){
   z <- (xbar - mu)/(sd.x/sqrt(n))
   return(z)
@@ -164,7 +164,7 @@ zscore <- function(xbar, mu, sd.x, n = 1){
 ```
 
 
-```{r}
+```{r, echo = F}
 mu <- mean(spring_temps)
 sd.x <- sd(spring_temps)
 n <- length(spring_temps)
@@ -179,13 +179,13 @@ Z |> round(2)
 
 2.  Calculating a $p$-value for their temperature (6.2).
 
-```{r}
+```{r, echo = F}
 pnorm(q = Z, lower.tail = F) |> round(2)
 ```
 
 3.  Reporting a 95% confidence interval for the mean for the temperatures reported in their dataset.
 
-```{r}
+```{r, echo = F}
 CI <- (qnorm(p = 0.975)*(sd.x/sqrt(n))) |> round(2)
 
 print(paste0(round(mu, 2), " +/- ", CI))
@@ -201,7 +201,7 @@ Using the same dataset (`weather`) as the previous question, isolate the data fo
 
 1.  Calculating a $z$-score for their temperature (13.6ºC).
 
-```{r}
+```{r, echo = F}
 summer_temps <- weather$SummTmax |> 
   na.omit() |> 
   as.numeric()
@@ -225,13 +225,13 @@ Z |> round(2)
 
 2.  Calculating a $p$-value for their temperature (13.6ºC).
 
-```{r}
+```{r, echo = F}
 pnorm(q = Z, lower.tail = F) |> round(2)
 ```
 
 3.  Reporting a 95% confidence interval for the mean for the temperatures reported in their dataset.
 
-```{r}
+```{r, echo = F}
 CI <- (qnorm(p = 0.975)*(sd.x/sqrt(n))) |> round(2)
 
 print(paste0(round(mu, 2), " +/- ", CI))
