--- a/exams/Fall 2025/Exam2_key.rmd
+++ b/exams/Fall 2025/Exam2_key.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exam 2"
+title: "Exam 2 Key"
 author: "BIOL 305"
 date: "`r Sys.Date()`"
 output: html_document
@@ -18,6 +18,8 @@ output: html_document
 # tidyverse always required
 library(tidyverse)
 # need anything else...?
+library(moments)
+library(ggplot2)
 ```
 
 # 1 [18 pts] Comparing yourself to others
@@ -26,18 +28,38 @@ As a kid, your parents often tell you not to compare yourself to others. However
 
 ## A: [4 pts] Choose an $\alpha$ value for evaluating your test, and choose whether you want to use a one-tailed or a two-tailed test to evaluate your results. Justify your choice, and explain why choosing an alpha value is important.
 
-
-
+I will choose an alpha of 0.05, as this is a standard. I am doing this to minimize Type 1 errors and conform to previous literature. I am doing a one-tailed because I want to see if I did BETTER, not better or worse. 
 
 ## B: [4 pts] $Z$-score Calculate a $Z$-score for your exam score.
+
+```{r}
+zscore <- function(xbar, mu, sd.x, n = 1){
+  z <- (xbar - mu)/(sd.x/sqrt(n))
+  return(z)
+}
+
+z_test<- zscore(xbar = 80.0,
+       mu = 70.0,
+       sd.x = 8.0,
+       n = 1)
+
+print(z_test)
+```
 
 
 ## C: [2 pts] Calculate a $p$ value for your $Z$-score.
 
+```{r}
+pnorm(z_test, lower.tail = F) |> round(2)
+```
 
 ## D: [4 pts] What is your conclusion about your exam? Are you exceptionally good or are you still roughly "average" for the class?
 
+I am stil roughly average because p was not less than alpha.
+
 ## E: [4] Write out a conclusion about your test. It should contain (1) a full sentence stating your conclusion and (2) your $Z$-score and your $p$-value in parentheses.
+
+I conclude that my exam, which was an 80%, was not significantly better than the class average of 70%. I conclude this by looking at my Z-score of (z=1.25) and my p-score of (p>0.05).
 
 # 2 [54 pts] Fish watchin'
 
@@ -60,31 +82,99 @@ fish_data
 
 ## A: [2 pts] What did the command "mutate" do in the above code block?
 
+It modified the fish_counts column to be registered as numeric so that the computer can actually read it for the tests.
+
 ## B: [5 pts] What is the explanatory variable in the above dataset? [2 pts] What type of data are these? [3 pts] (Nominal, ordinal, integer, or ratio? Also, categorical or continuous?)
+
+Times is the explanatory. This data is categorical and ordinal 
 
 ## C: [5 pts] What is the response variable in the above dataset? [2 pts] What type of data are these? [3 pts]
 
+Fish counts is the response variable. It is count data and ratio. 
+
 ## D: [4 pts] Plot a histogram of the response data. [3 pts] Use the arguments `main = ` and `xlab = ` to make the histogram prettier and to have it make more sense; you will have to designate names in "quotes". [1 pt]
+
+```{r}
+ggplot(fish_data, aes(fish_counts)) +
+  geom_histogram(binwidth = 5, boundary = 0, closed = "left") +
+  labs(title = "Fish per 15-minute interval",
+       x = "Count", y = "Frequency")
+```
 
 ## E: [4 pts] Plot a cumulative frequency plot of these data. [3 pts] Use the arguments `main = ` and `xlab = ` to make the graph prettier and to have it make more sense; you will have to designate names in "quotes". [1 pt]
 
+```{r}
+ggplot(fish_data, aes(fish_counts)) +
+  stat_ecdf(geom = "step") +
+  labs(title = "Cumulative Frequency of Fish Counts",
+       x = "Count", y = "Cumulative proportion")
+```
+
+
 ## F: [2 pts] What is the kurtosis of the response variable?
+
+```{r}
+round(kurtosis(fish_data$fish_counts) - 3, 2)
+```
+
 
 ## G: [2 pts] What is the skew of the response variable?
 
+```{r}
+round(skewness(fish_data$fish_counts), 2)
+```
+
+
 ## H: [4 pts] Are there any outliers in these data? Create the appropriate graph [3 pts] and perform the appropriate analyses to find out [1 pt].
+
+```{r}
+bp <- boxplot.stats(fish_data$fish_counts)
+list(outliers = bp$out, stats = bp$stats)
+
+ggplot(fish_data, aes(x = "", y = fish_counts)) +
+  geom_boxplot(fill = "blue", alpha = 0.5, outlier.shape = NA) +  # hide outlier symbols
+  geom_jitter(width = 0.15, size = 3, alpha = 0.5, color = "green") +
+  labs(title = "Fish Counts per 15-Minute Interval",
+       y = "Number of Fish",
+       x = NULL) +
+  theme_bw()
+
+```
+No outliers.
 
 ## I: [4 pts] Are the data normally distributed? Explain, referencing the evidence you've obtained above.
 
+Yes. The ecdf and histogram look roughly normal, and it is not significantly skewed. We can confirm with a shapiro-test.
+
 ## J: [2 pts] Now perform a `shapiro.test` on the response variable. A Shapiro test is a test of normality, where $p < 0.05$ indicates non-normal data. Does this test conform with your above assessment?
+
+```{r}
+shapiro.test(fish_data$fish_counts)
+```
+Yup, that's some normal data.
 
 ## K: [6 pts] Your annoying friend who is always trying to one-up you says they saw 35 fish in 15 minutes. You think they are lying, but want to show scientifically why you doubt their claim. What test would you use to evaluate this claim? Describe the kind of test [2 pts], the $\alpha$ value you would use and why [2 pts], and whether this would be a one-tailed or a two-tailed test [2 pts]. (Note: the salmon are one-tailed, but this does not affect the statistical test).
 
+I would use a zscore test and then put the z score into a pnorm. This would be one tailed because we only care if they are over.
+
 ## L: [4 pts] What are the *null* and *alternative* hypotheses for part K?
+
+$H_0: \mu = \mu_0$; $H_A: \mu \ne \mu_0$
 
 ## M: [5 pts] Perform the test you outlined in parts K & L; report the test statistic (i.e., $Z$) and the $P$ value.
 
+```{r}
+z_fish <- zscore(xbar = 35,
+       mu= (mean(fish_data$fish_counts)),
+       sd.x = sd(fish_data$fish_counts),
+       n = 1)
+
+pnorm(z_fish, lower.tail = F) |> round(4)
+```
+
 ## N: [5 pts] What is the statistical conclusion of this test? State both a statistical conclusion, with a $Z$ value and a $P$ value, as well as a statement relating back to your original hypothesis in part K.
+
+My friend is lying!!! Our zscore is large (z=2.26) and our p score is small (p<0.05)
 
 # 3 [11 pts] A statistical disagreement
 
@@ -94,7 +184,22 @@ You then find out that Dr. Cooper eats 6 cookies on average every day (if his wi
 
 ## A: [2 pts] What are the null and alternative hypotheses in this situation?
 
+$H_0: \mu = 3$
+
+$H_A: \mu > 3$
+
 ## B: [9 pts] You run the test with $\alpha = 0.05$. One of your friends says no, Dr. Cooper's behavior is not unusual with $p = 0.07$, whereas another friend says Dr. Cooper eats way too many cookies with $p < 0.0001$. Perform the test yourself, and determine why your friends got different answers. (Full points for performing the test [3], correctly interpreting the test [2], and correctly identifying why the two answers disagree [4]).
+
+```{r}
+z_cookie <- zscore(xbar = 6, 
+       mu = 3,
+       sd = 2,
+       n = 8)
+
+print(pnorm(z_cookie, lower.tail = F) |> round(4))
+print(z_cookie|> round(2)) 
+```
+
 
 # 4 [22 pts] Belltower traffic
 
@@ -114,9 +219,52 @@ belltower_data
 
 ## A: [2 pts] Which variable is the response variable? What type of data are these?
 
+Response is people passing, it is ratio.
+
 ## B: [7 pts] Is the response variable normally distributed? [2 pts] Support your answer with a histogram [1 pt], a cumulative frequency plot [1 pt], assessments of skewness and kurtosis [2 pts], an indication of if outliers exist [1 pt]. You will lose 1 pt overall if you do *not* change the histogram and plot titles and axes labels as per the previous problems.
 
+```{r}
+# Histogram
+ggplot(belltower_data, aes(people_passing)) +
+  geom_histogram(binwidth = 5, boundary = 0, closed = "left") +
+  labs(title = "Students per passing period",
+       x = "Count", y = "Frequency")
+
+# QQ plot
+ggplot(belltower_data, aes(sample = people_passing)) +
+  stat_qq() + stat_qq_line() +
+  labs(title = "QQ plot — raw counts")
+
+# Shapiro–Wilk
+shp_raw <- shapiro.test(belltower_data$people_passing)
+list(W = round(shp_raw$statistic,3),
+     p_value = ifelse(shp_raw$p.value < 0.001, "< 0.001", sprintf("%.3f", shp_raw$p.value)))
+# Cumulative frequency
+ggplot(belltower_data, aes(people_passing)) +
+  stat_ecdf(geom = "step") +
+  labs(title = "Cumulative Frequency — Students per Passing",
+       x = "Count", y = "Cumulative proportion")
+
+# Skewness & kurtosis
+skw <- moments::skewness(belltower_data$people_passing)
+kur <- moments::kurtosis(belltower_data$people_passing) - 3  # excess kurtosis
+
+# Outliers via boxplot rule
+bp <- boxplot.stats(belltower_data$people_passing)
+
+list(
+  skewness = round(skw, 2),
+  excess_kurtosis = round(kur, 2),
+  boxplot_outliers = bp$out
+)
+
+
+```
+
+
 ## C: [7 pts] If a transformation is needed, what transformation is required? Show your work, and provide evidence for your transformation being the most appropriate transformation.
+
+Log transformation required.
 
 **NOTE**: Test only the following transformations:
 
@@ -125,7 +273,62 @@ belltower_data
 - $x^3$
 - $log(x + 1)$ (can be done with function `log1p` or manually as `log(x+1)`)
 
+```{r}
+dat <- belltower_data$people_passing
+
+transforms <- list(
+  sqrt = sqrt(dat),
+  square = dat^2,
+  cube = dat^3,
+  log1p = log1p(dat)
+)
+
+shp_tbl <- imap_dfr(transforms, ~{
+  s <- shapiro.test(.x)
+  tibble(transform = .y,
+         W = unname(s$statistic),
+         p = unname(s$p.value))
+}) |> 
+  mutate(W = round(W,3),
+         p = ifelse(p < 0.001, "< 0.001", sprintf("%.3f", p))) 
+
+shp_tbl
+
+
+# Visually confirming the transformation worked
+ggplot(tibble(x = log1p(dat)), aes(sample = x)) +
+  stat_qq() + stat_qq_line() +
+  labs(title = "QQ plot — log1p transformed")
+
+# Statistically confirming
+
+print(shp_tbl)
+
+```
+
+
 ## D: [6 pts] What is the 95% confidence interval for the mean of these data?
+
+```{r}
+y <- log1p(dat)
+
+n  <- length(y)
+m  <- mean(y)
+s  <- sd(y)
+se <- s / sqrt(n)
+tcrit <- qt(0.975, df = n - 1)
+
+ci_lo <- m - tcrit * se
+ci_hi <- m + tcrit * se
+
+# back-transform endpoints
+bt_lo <- exp(ci_lo) - 1
+bt_hi <- exp(ci_hi) - 1
+
+round(c(lower = bt_lo, upper = bt_hi), 2)
+
+```
+
 
 **HINT**: You may have to *back-transform* your answers using one of the following commands:
 
